--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>NEW YEARS EVE</h1>
+    <!-- <h1>NEW YEARS EVE</h1>
     <div class="countdown-container">
     <div class="countdown-el days-c">
         <p class="big-text" id="days">0</p>
@@ -29,7 +29,60 @@
         <p class="big-text" id="seconds">0</p>
         <span>secs</span>
     </div>
+    </div> -->
+
+    <div>
+        BUILD A TODO APP WITH ANGULAR
+        <div>
+            <pre>
+                // src/app/app.component.ts
+                import { Component } from '@angular/core';
+                import { Todo } from './todo.model';
+
+                @Component({
+                selector: 'app-root',
+                templateUrl: './app.component.html',
+                styleUrls: ['./app.component.css']
+                })
+                export class AppComponent {
+                todos: Todo[] = [];
+                newTodoText: string = '';
+
+                addTodo() {
+                if (this.newTodoText.trim() !== '') {
+                const newTodo: Todo = { id: this.todos.length + 1, text: this.newTodoText, completed: false };
+                this.todos.push(newTodo);
+                this.newTodoText = '';
+                }
+                }
+
+                deleteTodo(id: number) {
+                this.todos = this.todos.filter(todo => todo.id !== id);
+                }
+                }</pre>
+            <p>
+            <pre>
+                <!-- src/app/app.component.html -->
+            <div>
+                
+                <h1>Todo List</h1>
+                <div>
+                    <input type="text" [(ngModel)]="newTodoText" placeholder="Add a new task" />
+                    <button (click)="addTodo()">Add</button>
+                </div>
+                <div *ngFor="let todo of todos">
+                    <div>
+                        <input type="checkbox" [(ngModel)]="todo.completed" />
+                        <span [class.completed]="todo.completed">{{ todo.text }}</span>
+                        <button (click)="deleteTodo(todo.id)">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </pre>
+            </p>
+        </div>
     </div>
+
 </body>
 
 </html>
