--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 const app = express();
                 const port = 3000;
 
-                const ATLAS_URI = "mongodb+srv://<username>:about<password>@cluster0.07pblg8.mongodb.net/";
+                const ATLAS_URI = "mongodb+srv://<username>:<password>@cluster0.07pblg8.mongodb.net/";
 
                 mongoose.connect(ATLAS_URI, { useNewUrlParser: true, useUnifiedTopology: true });
 
