--- a/index.html
+++ b/index.html
@@ -368,56 +368,75 @@
 
                 const ATLAS_URI = "mongodb+srv://<username>:<password>@cluster0.07pblg8.mongodb.net/";
 
-                mongoose.connect(ATLAS_URI, { useNewUrlParser: true, useUnifiedTopology: true });
+                        mongoose.connect(ATLAS_URI, { useNewUrlParser: true, useUnifiedTopology: true });
 
-                const userSchema = new mongoose.Schema({
-                name: String,
-                email: String,
-                age: Number,
-                });
+                        const userSchema = new mongoose.Schema({
+                        name: String,
+                        email: String,
+                        age: Number,
+                        });
 
-                const User = mongoose.model('User', userSchema);
+                        const User = mongoose.model('User', userSchema);
 
-                const newUser = new User({
-                name: 'Roki Jolin',
-                email: 'roki12@example.com',
-                age: 23,
-                });
+                        const newUser = new User({
+                        name: 'Roki Jolin',
+                        email: 'roki12@example.com',
+                        age: 23,
+                        });
 
-                newUser.save()
-                .then(() => {
-                console.log('Save User at MongoDB');
+                        newUser.save()
+                        .then(() => {
+                        console.log('Save User at MongoDB');
+                        })
+                        .catch((error) => {
+                        console.error(error);
+                        });
+
+                        app.use(bodyParser.json());
+
+                        app.post("/users", async (request, response) => {
+                        const user = new User(request.body);
+                        try {
+                        await user.save();
+                        response.send(user);
+                        } catch (error) {
+                        response.status(500).send(error);
+                        }
+                        });
+
+
+                        app.get("/users", async (request, response) => {
+                        try {
+                        const users = await User.find({});
+                        response.send(users);
+                        } catch (error) {
+                        response.status(500).send(error);
+                        }
+                        });
+
+
+                        app.listen(port, () => {
+                        console.log(Server is running on http://localhost:${port});
+                        });
+            </xmp>
+        </div>
+        <div>
+            <xmp>
+                import { Injectable } from '@angular/core';
+
+                @Injectable({
+                providedIn: 'root'
                 })
-                .catch((error) => {
-                console.error(error);
-                });
+                export class WaterService {
 
-                app.use(bodyParser.json());
+                typeOfWater : string []= ['Fresh water', 'Salt water', 'Brackish water'];
 
-                app.post("/users", async (request, response) => {
-                const user = new User(request.body);
-                try {
-                await user.save();
-                response.send(user);
-                } catch (error) {
-                response.status(500).send(error);
+                getWaterType(): string[] {
+                return this.typeOfWater;
                 }
-                });
-
-
-                app.get("/users", async (request, response) => {
-                try {
-                const users = await User.find({});
-                response.send(users);
-                } catch (error) {
-                response.status(500).send(error);
+                constructor() { }
                 }
-                });
 
-
-                app.listen(port, () => {
-                console.log(Server is running on http://localhost:${port});
-                });
             </xmp>
         </div>
     </div>
